# diffsoup

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: 00_version.py  01_mip360.py  02_synthetic.py  03_random_init.py  04_view_results.py  05_benchmark_fps.py  06_export_web.py  07_extract_bench.py  utils.py
python/diffsoup/: __init__.py  multires.py  optimize.py  point3d.py  rasterize.py  remesh.py
src/: main.cpp  remesh.cpp  remesh.h  remesh_clip.cpp  remesh_clip.h
src/cuda/: cuda_common.cuh  encoding.cu  encoding.cuh  multires.cu  multires.cuh  rasterize.cu  rasterize.cuh
viewer/: CMakeLists.txt  pyproject.toml
viewer/python/diffsoupviewer/: __init__.py
viewer/src/: camera.cpp  camera.h  main.cpp  options.h  triangles.h  viewer.cpp  viewer.h
web/: benchmark.html  index.html
